# scrapping_marketplace

./: .gitignore  README.md  main.py  pyproject.toml
